@@ -67,20 +67,4 @@
 
   </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <!-- AbstractSSLUtilTest injects environment variables by reflecting into JDK internals,
-               which requires these opens on Java 16+. -->
-          <argLine>-Djava.net.preferIPv4Stack=true
-            --add-opens java.base/java.lang=ALL-UNNAMED
-            --add-opens java.base/java.util=ALL-UNNAMED</argLine>
-        </configuration>
-      </plugin>
-
-    </plugins>
-  </build>
 </project>
